Refactoring React App for backend
